headers/physics/orxBody.h

typedef struct __orxBODY_t        orxBODY;
typedef struct __orxBODY_PART_t        orxBODY_PART;
typedef struct __orxBODY_JOINT_t        orxBODY_JOINT;


/** Gets a body speed
 * @param[in]   _pstBody        Concerned body
 * @param[out]  _pvSpeed        Speed to get
 * @return      Body speed / orxNULL
 */
extern orxDLLAPI orxVECTOR *orxFASTCALL       orxBody_GetSpeed(const orxBODY *_pstBody, orxVECTOR *_pvSpeed);


/** Gets a body speed at a specified world position
 * @param[in]   _pstBody        Concerned body
 * @param[in]   _pvPosition     Concerned world position
 * @param[out]  _pvSpeed        Speed to get
 * @return      Body speed / orxNULL
 */
extern orxDLLAPI orxVECTOR *orxFASTCALL       orxBody_GetSpeedAtWorldPosition(const orxBODY *_pstBody, const orxVECTOR *_pvPosition, orxVECTOR *_pvSpeed);


/** Gets a body angular velocity
 * @param[in]   _pstBody        Concerned body
 * @return      Body angular velocity (radians/seconds)
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetAngularVelocity(const orxBODY *_pstBody);


/** Gets a body custom gravity
 * @param[in]   _pstBody          Concerned body
 * @param[out]  _pvCustomGravity  Custom gravity to get
 * @return      Body custom gravity / orxNULL is object doesn't have any
 */
extern orxDLLAPI orxVECTOR *orxFASTCALL       orxBody_GetCustomGravity(const orxBODY *_pstBody, orxVECTOR *_pvCustomGravity);


/** Is a body using a fixed rotation
 * @param[in]   _pstBody        Concerned body
 * @return      orxTRUE if fixed rotation, orxFALSE otherwise
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxBody_IsFixedRotation(const orxBODY *_pstBody);


/** Gets the dynamic property of a body
 * @param[in]   _pstBody        Concerned physical body
 * @return      orxTRUE / orxFALSE
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxBody_IsDynamic(const orxBODY *_pstBody);


/** Gets the "allow moving" property of a body, only relevant for non-dynamic bodies
 * @param[in]   _pstBody        Concerned physical body
 * @return      orxTRUE / orxFALSE
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxBody_GetAllowMoving(const orxBODY *_pstBody);


/** Gets a body mass
 * @param[in]   _pstBody        Concerned body
 * @return      Body mass
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetMass(const orxBODY *_pstBody);


/** Gets a body center of mass (object space)
 * @param[in]   _pstBody        Concerned body
 * @param[out]  _pvMassCenter   Mass center to get
 * @return      Mass center / orxNULL
 */
extern orxDLLAPI orxVECTOR *orxFASTCALL       orxBody_GetMassCenter(const orxBODY *_pstBody, orxVECTOR *_pvMassCenter);



/** Sets a body linear damping
 * @param[in]   _pstBody        Concerned body
 * @param[in]   _fDamping       Linear damping to set
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetLinearDamping(orxBODY *_pstBody, orxFLOAT _fDamping);


/** Sets a body angular damping
 * @param[in]   _pstBody        Concerned body
 * @param[in]   _fDamping       Angular damping to set
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetAngularDamping(orxBODY *_pstBody, orxFLOAT _fDamping);


/** Gets a body linear damping
 * @param[in]   _pstBody        Concerned body
 * @return      Body's linear damping
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetLinearDamping(const orxBODY *_pstBody);


/** Gets a body angular damping
 * @param[in]   _pstBody        Concerned body
 * @return      Body's angular damping
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetAngularDamping(const orxBODY *_pstBody);


/** Is point inside body? (Using world coordinates)
 * @param[in]   _pstBody        Concerned physical body
 * @param[in]   _pvPosition     Position to test (world coordinates)
 * @return      orxTRUE / orxFALSE
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxBody_IsInside(const orxBODY *_pstBody, const orxVECTOR *_pvPosition);



/** Applies a torque
 * @param[in]   _pstBody        Concerned body
 * @param[in]   _fTorque        Torque to apply
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_ApplyTorque(orxBODY *_pstBody, orxFLOAT _fTorque);


/** Applies a force
 * @param[in]   _pstBody        Concerned body
 * @param[in]   _pvForce        Force to apply
 * @param[in]   _pvPoint        Point (world coordinates) where the force will be applied, if orxNULL, center of mass will be used
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_ApplyForce(orxBODY *_pstBody, const orxVECTOR *_pvForce, const orxVECTOR *_pvPoint);


/** Applies an impulse
 * @param[in]   _pstBody        Concerned body
 * @param[in]   _pvImpulse      Impulse to apply
 * @param[in]   _pvPoint        Point (world coordinates) where the impulse will be applied, if orxNULL, center of mass will be used
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_ApplyImpulse(orxBODY *_pstBody, const orxVECTOR *_pvImpulse, const orxVECTOR *_pvPoint);



/** Sets self flags of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @param[in]   _u16SelfFlags   Self flags to set
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetPartSelfFlags(orxBODY_PART *_pstBodyPart, orxU16 _u16SelfFlags);


/** Sets check mask of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @param[in]   _u16CheckMask   Check mask to set
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetPartCheckMask(orxBODY_PART *_pstBodyPart, orxU16 _u16CheckMask);


/** Gets self flags of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @return Self flags of the body part
 */
extern orxDLLAPI orxU16 orxFASTCALL           orxBody_GetPartSelfFlags(const orxBODY_PART *_pstBodyPart);


/** Gets check mask of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @return Check mask of the body part
 */
extern orxDLLAPI orxU16 orxFASTCALL           orxBody_GetPartCheckMask(const orxBODY_PART *_pstBodyPart);


/** Sets a body part solid
 * @param[in]   _pstBodyPart    Concerned body part
 * @param[in]   _bSolid         Solid or sensor?
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetPartSolid(orxBODY_PART *_pstBodyPart, orxBOOL _bSolid);


/** Is a body part solid?
 * @param[in]   _pstBodyPart    Concerned body part
 * @return      orxTRUE / orxFALSE
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxBody_IsPartSolid(const orxBODY_PART *_pstBodyPart);


/** Sets friction of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @param[in]   _fFriction      Friction
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetPartFriction(orxBODY_PART *_pstBodyPart, orxFLOAT _fFriction);


/** Gets friction of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @return      Friction
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetPartFriction(const orxBODY_PART *_pstBodyPart);


/** Sets restitution of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @param[in]   _fRestitution   Restitution
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetPartRestitution(orxBODY_PART *_pstBodyPart, orxFLOAT _fRestitution);


/** Gets restitution of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @return      Restitution
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetPartRestitution(const orxBODY_PART *_pstBodyPart);


/** Sets density of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @param[in]   _fDensity       Density
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetPartDensity(orxBODY_PART *_pstBodyPart, orxFLOAT _fDensity);


/** Gets density of a body part
 * @param[in]   _pstBodyPart    Concerned body part
 * @return      Density
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetPartDensity(const orxBODY_PART *_pstBodyPart);


/** Is point inside part? (Using world coordinates)
 * @param[in]   _pstBodyPart    Concerned physical body part
 * @param[in]   _pvPosition     Position to test (world coordinates)
 * @return      orxTRUE / orxFALSE
 */
extern orxDLLAPI orxBOOL orxFASTCALL          orxBody_IsInsidePart(const orxBODY_PART *_pstBodyPart, const orxVECTOR *_pvPosition);



/** Enables a (revolute) body joint motor
 * @param[in]   _pstBodyJoint   Concerned body joint
 * @param[in]   _bEnable        Enable / Disable
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_EnableMotor(orxBODY_JOINT *_pstBodyJoint, orxBOOL _bEnable);


/** Sets a (revolute) body joint motor speed
 * @param[in]   _pstBodyJoint   Concerned body joint
 * @param[in]   _fSpeed         Speed
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetJointMotorSpeed(orxBODY_JOINT *_pstBodyJoint, orxFLOAT _fSpeed);


/** Sets a (revolute) body joint maximum motor torque
 * @param[in]   _pstBodyJoint   Concerned body joint
 * @param[in]   _fMaxTorque     Maximum motor torque
 * @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL        orxBody_SetJointMaxMotorTorque(orxBODY_JOINT *_pstBodyJoint, orxFLOAT _fMaxTorque);



/** Gets the reaction force on the attached body at the joint anchor
 * @param[in]   _pstBodyJoint   Concerned body joint
 * @param[out]  _pvForce        Reaction force
 * @return      Reaction force in Newtons
 */
extern orxDLLAPI orxVECTOR *orxFASTCALL       orxBody_GetJointReactionForce(const orxBODY_JOINT *_pstBodyJoint, orxVECTOR *_pvForce);