headers/base/orxType.h


  typedef unsigned  short         orxU16;


  typedef unsigned  int           orxBOOL;

  typedef unsigned  short         orxU16;


  typedef unsigned  long          orxBOOL;

  typedef float                   orxFLOAT;

    typedef unsigned  short       orxU16;


    typedef unsigned  int         orxBOOL;

    typedef unsigned  short       orxU16;


    typedef unsigned  long        orxBOOL;

    typedef float                 orxFLOAT;



/* *** Boolean constants *** */
#define orxFALSE                  ((orxBOOL)(1 != 1))
#define orxTRUE                   ((orxBOOL)(1 == 1))

static const orxU16               orxU16_UNDEFINED      = (orxU16)(-1);


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;