src/norx/body.nim


proc orxBody_GetSpeed*(pstBody: ptr orxBODY; pvSpeed: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetSpeed", dynlib: libORX.}
## * Gets a body speed at a specified world position
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvPosition     Concerned world position
##  @param[out]  _pvSpeed        Speed to get
##  @return      Body speed / nil
##

proc orxBody_GetSpeedAtWorldPosition*(pstBody: ptr orxBODY;
                                     pvPosition: ptr orxVECTOR;
                                     pvSpeed: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxBody_GetSpeedAtWorldPosition", dynlib: libORX.}
## * Gets a body angular velocity
##  @param[in]   _pstBody        Concerned body
##  @return      Body angular velocity (radians/seconds)
##

proc orxBody_GetAngularVelocity*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetAngularVelocity", dynlib: libORX.}
## * Gets a body custom gravity
##  @param[in]   _pstBody          Concerned body
##  @param[out]  _pvCustomGravity  Custom gravity to get
##  @return      Body custom gravity / nil is object doesn't have any
##

proc orxBody_GetCustomGravity*(pstBody: ptr orxBODY; pvCustomGravity: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetCustomGravity", dynlib: libORX.}
## * Is a body using a fixed rotation
##  @param[in]   _pstBody        Concerned body
##  @return      orxTRUE if fixed rotation, orxFALSE otherwise
##

proc orxBody_IsFixedRotation*(pstBody: ptr orxBODY): orxBOOL {.cdecl,
    importc: "orxBody_IsFixedRotation", dynlib: libORX.}
## * Gets the dynamic property of a body
##  @param[in]   _pstBody        Concerned physical body
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsDynamic*(pstBody: ptr orxBODY): orxBOOL {.cdecl,
    importc: "orxBody_IsDynamic", dynlib: libORX.}
## * Gets the "allow moving" property of a body, only relevant for non-dynamic bodies
##  @param[in]   _pstBody        Concerned physical body
##  @return      orxTRUE / orxFALSE
##

proc orxBody_GetAllowMoving*(pstBody: ptr orxBODY): orxBOOL {.cdecl,
    importc: "orxBody_GetAllowMoving", dynlib: libORX.}
## * Gets a body mass
##  @param[in]   _pstBody        Concerned body
##  @return      Body mass
##

proc orxBody_GetMass*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetMass", dynlib: libORX.}
## * Gets a body center of mass (object space)
##  @param[in]   _pstBody        Concerned body
##  @param[out]  _pvMassCenter   Mass center to get
##  @return      Mass center / nil
##

proc orxBody_GetMassCenter*(pstBody: ptr orxBODY; pvMassCenter: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxBody_GetMassCenter", dynlib: libORX.}
## * Sets a body linear damping
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fDamping       Linear damping to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetLinearDamping*(pstBody: ptr orxBODY; fDamping: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetLinearDamping", dynlib: libORX.}
## * Sets a body angular damping
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fDamping       Angular damping to set
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetAngularDamping*(pstBody: ptr orxBODY; fDamping: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetAngularDamping", dynlib: libORX.}
## * Gets a body linear damping
##  @param[in]   _pstBody        Concerned body
##  @return      Body's linear damping
##

proc orxBody_GetLinearDamping*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetLinearDamping", dynlib: libORX.}
## * Gets a body angular damping
##  @param[in]   _pstBody        Concerned body
##  @return      Body's angular damping
##

proc orxBody_GetAngularDamping*(pstBody: ptr orxBODY): orxFLOAT {.cdecl,
    importc: "orxBody_GetAngularDamping", dynlib: libORX.}
## * Is point inside body? (Using world coordinates)
##  @param[in]   _pstBody        Concerned physical body
##  @param[in]   _pvPosition     Position to test (world coordinates)
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsInside*(pstBody: ptr orxBODY; pvPosition: ptr orxVECTOR): orxBOOL {.
    cdecl, importc: "orxBody_IsInside", dynlib: libORX.}
## * Applies a torque
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _fTorque        Torque to apply
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_ApplyTorque*(pstBody: ptr orxBODY; fTorque: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxBody_ApplyTorque", dynlib: libORX.}
## * Applies a force
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvForce        Force to apply
##  @param[in]   _pvPoint        Point (world coordinates) where the force will be applied, if nil, center of mass will be used
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_ApplyForce*(pstBody: ptr orxBODY; pvForce: ptr orxVECTOR;
                        pvPoint: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxBody_ApplyForce", dynlib: libORX.}
## * Applies an impulse
##  @param[in]   _pstBody        Concerned body
##  @param[in]   _pvImpulse      Impulse to apply
##  @param[in]   _pvPoint        Point (world coordinates) where the impulse will be applied, if nil, center of mass will be used
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_ApplyImpulse*(pstBody: ptr orxBODY; pvImpulse: ptr orxVECTOR;
                          pvPoint: ptr orxVECTOR): orxSTATUS {.cdecl,
    importc: "orxBody_ApplyImpulse", dynlib: libORX.}
## * Sets self flags of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _u16SelfFlags   Self flags to set
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartSelfFlags*(pstBodyPart: ptr orxBODY_PART; u16SelfFlags: orxU16): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartSelfFlags", dynlib: libORX.}
## * Sets check mask of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _u16CheckMask   Check mask to set
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartCheckMask*(pstBodyPart: ptr orxBODY_PART; u16CheckMask: orxU16): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartCheckMask", dynlib: libORX.}
## * Gets self flags of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return Self flags of the body part
##

proc orxBody_GetPartSelfFlags*(pstBodyPart: ptr orxBODY_PART): orxU16 {.cdecl,
    importc: "orxBody_GetPartSelfFlags", dynlib: libORX.}
## * Gets check mask of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return Check mask of the body part
##

proc orxBody_GetPartCheckMask*(pstBodyPart: ptr orxBODY_PART): orxU16 {.cdecl,
    importc: "orxBody_GetPartCheckMask", dynlib: libORX.}
## * Sets a body part solid
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _bSolid         Solid or sensor?
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartSolid*(pstBodyPart: ptr orxBODY_PART; bSolid: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartSolid", dynlib: libORX.}
## * Is a body part solid?
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsPartSolid*(pstBodyPart: ptr orxBODY_PART): orxBOOL {.cdecl,
    importc: "orxBody_IsPartSolid", dynlib: libORX.}
## * Sets friction of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _fFriction      Friction
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartFriction*(pstBodyPart: ptr orxBODY_PART; fFriction: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartFriction", dynlib: libORX.}
## * Gets friction of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      Friction
##

proc orxBody_GetPartFriction*(pstBodyPart: ptr orxBODY_PART): orxFLOAT {.cdecl,
    importc: "orxBody_GetPartFriction", dynlib: libORX.}
## * Sets restitution of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _fRestitution   Restitution
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartRestitution*(pstBodyPart: ptr orxBODY_PART;
                                fRestitution: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxBody_SetPartRestitution", dynlib: libORX.}
## * Gets restitution of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      Restitution
##

proc orxBody_GetPartRestitution*(pstBodyPart: ptr orxBODY_PART): orxFLOAT {.cdecl,
    importc: "orxBody_GetPartRestitution", dynlib: libORX.}
## * Sets density of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @param[in]   _fDensity       Density
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetPartDensity*(pstBodyPart: ptr orxBODY_PART; fDensity: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetPartDensity", dynlib: libORX.}
## * Gets density of a body part
##  @param[in]   _pstBodyPart    Concerned body part
##  @return      Density
##

proc orxBody_GetPartDensity*(pstBodyPart: ptr orxBODY_PART): orxFLOAT {.cdecl,
    importc: "orxBody_GetPartDensity", dynlib: libORX.}
## * Is point inside part? (Using world coordinates)
##  @param[in]   _pstBodyPart    Concerned physical body part
##  @param[in]   _pvPosition     Position to test (world coordinates)
##  @return      orxTRUE / orxFALSE
##

proc orxBody_IsInsidePart*(pstBodyPart: ptr orxBODY_PART; pvPosition: ptr orxVECTOR): orxBOOL {.
    cdecl, importc: "orxBody_IsInsidePart", dynlib: libORX.}
## * Enables a (revolute) body joint motor
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[in]   _bEnable        Enable / Disable
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_EnableMotor*(pstBodyJoint: ptr orxBODY_JOINT; bEnable: orxBOOL): orxSTATUS {.
    cdecl, importc: "orxBody_EnableMotor", dynlib: libORX.}
## * Sets a (revolute) body joint motor speed
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[in]   _fSpeed         Speed
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetJointMotorSpeed*(pstBodyJoint: ptr orxBODY_JOINT; fSpeed: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxBody_SetJointMotorSpeed", dynlib: libORX.}
## * Sets a (revolute) body joint maximum motor torque
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[in]   _fMaxTorque     Maximum motor torque
##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxBody_SetJointMaxMotorTorque*(pstBodyJoint: ptr orxBODY_JOINT;
                                    fMaxTorque: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxBody_SetJointMaxMotorTorque", dynlib: libORX.}
## * Gets the reaction force on the attached body at the joint anchor
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @param[out]  _pvForce        Reaction force
##  @return      Reaction force in Newtons
##

proc orxBody_GetJointReactionForce*(pstBodyJoint: ptr orxBODY_JOINT;
                                   pvForce: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxBody_GetJointReactionForce", dynlib: libORX.}
## * Gets the reaction torque on the attached body
##  @param[in]   _pstBodyJoint   Concerned body joint
##  @return      Reaction torque
##
